# povec

./: .gitignore  README.md  app.py  localhost.txt  pyproject.toml  requirements.txt
config/: config.yaml
docs/: DATA_DICTIONARY.md  METHODS.md
src/ec_poverty_monitor/: cli.py  pipeline.py  settings.py  validate.py
src/ec_poverty_monitor/dashboard/: app.py
src/ec_poverty_monitor/sources/: inec_labor.py  inec_poverty.py  inec_wp.py  pip.py  wdi.py
src/ec_poverty_monitor/transform/: marts.py
src/ec_poverty_monitor/util/: fs.py  http.py  logging.py  text.py
tests/: test_imports.py  test_inec_poverty_parsing.py
